# PyETR-myfork

./: .gitignore  .pre-commit-config.yaml  README.md  advanced_dialogue_patterns.py  check.sh  credits.md  dialogue_generation_guide.md  getting_started.py  mkdocs.yml  peer_dialogue_example.py  pyetr cases import e17.py  pyproject.toml  syntax_reference.md  test_build.py  tutorial.py
docs/: case_index.md  credits.md  defining_inference.md  development.md  example.md  func_callers.md  glossary.md  index.md  inference_index.md  installation.md  introduction.md  summary.md  troubleshooting.md  view_equality_and_equivalence.md  view_methods.md
examples/: arb_sub_test.py  case_example.py  case_test.py  direct_decision_example.py  do_replacements.py  full_example.py  infix_test.py  new.py  new_test.py  replacements.py  smt_lib_test.py  smt_test.py  test.py  test_merge.py  test_new_parser.py  test_parse.py  test_uni_prod.py  test_unparse.py  view_string_to_csv.py
pyetr/: __init__.py  abstract_atom.py  abstract_term.py  add_new_emphasis.py  atom.py  cases.py  dependency.py  exceptions.py  func_library.py  function.py  inference.py  issues.py  multiset.py  open_atom.py  open_term.py  parsing.py  special_funcs.py  stateset.py  term.py  tools.py  types.py  utils.py  view.py  weight.py
scripts/: all_checks.py  common.py  generate_all.py  generate_case_all.py  generate_case_index.py  generate_case_list.py  generate_inference_page.py  generate_utils_page.py  generate_view_methods.py
tests/: .coveragerc  case_list.json  case_list_extra.json  conftest.py  failure_list.json  (+10 more)
(+89 files in other folders)
