[tool.poetry]
name = "pyetr"
version = "0.1.1"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pyparsing = "^3.1.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
autoflake = "^2.2.0"
isort = "^5.12.0"
black = "^23.7.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
case-index = "scripts.generate_case_index:main"
case-list = "scripts.generate_case_list:main"
infer-index = "scripts.generate_inference_page:main"
view-methods = "scripts.generate_view_methods:main"
gen-all = "scripts.generate_all:main"